k8s/openbake/network/allow/allow-backend-to-core-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-core-postgres
  namespace: openbake
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: core-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: backend
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: postgres-backup
      ports:
        - protocol: TCP
          port: 5432
