k8s/openbake/network/allow/allow-member-service-to-member-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-member-service-to-member-postgres
  namespace: openbake
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: member-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: member-service
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: postgres-backup
      ports:
        - protocol: TCP
          port: 5432
