k8s/openbake/network/allow/allow-to-loki.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-loki
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: log-agent
      ports:
        - protocol: TCP
          port: 3100
