k8s/openbake/network/allow/allow-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-redis
  namespace: openbake
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: api-gateway
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: backend
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: member-service
      ports:
        - protocol: TCP
          port: 6379
